--- a/composer.json
+++ b/composer.json
@@ -50,7 +50,10 @@
         "symfony/dotenv": "^5.4 || ^6.4",
         "symfony/flex": "^2.4",
         "symfony/intl": "^5.4 || ^6.4",
-        "symfony/web-profiler-bundle": "^5.4 || ^6.4"
+        "symfony/web-profiler-bundle": "^5.4 || ^6.4",
+        "league/flysystem-bundle": "2.4.0",
+        "sylius/mailer-bundle":  "^1.8 || ^2.0@beta",
+        "matthiasnoback/symfony-config-test": "^4.3"
     },
     "conflict": {
         "behat/mink-selenium2-driver": ">=1.7.0"
